# manager

./: Containerfile  build_push_cmd_exec.sh  build_push_db_incident_assistant.sh  build_push_db_servers_cmdb.sh  build_push_slack.sh  build_run_cmd_exec.sh  build_run_db_incident_assistant.sh  build_run_db_servers_cmdb.sh  build_run_slack.sh  docker-compose.yaml  pyproject.toml  slack_main.py  worker_main.py
.claude/: settings.local.json
.github/workflows/: build-manager.yaml
src/: api.py  celery_worker.py  config.py  slack_worker.py
src/database/: client.py
src/frameworks/: __init__.py
src/integrations/hil/: hil.py
src/integrations/hil/slack/: __init__.py  slack.py
src/llm/: __init__.py  llm.py
src/modules/chat/: router.py
src/modules/cmdb/: metadata.py
src/modules/incident/: __init__.py  assistant.py  db.py
src/modules/inventory/: __init__.py  db.py
src/modules/metrics/: __init__.py  prometheus.py  storage.py
src/modules/task/: __init__.py  db.py
src/modules/tools/: data_objects.py
src/schedulers/: metrics_analyzer.py  threshold_setter.py
src/tools/classifier/: main.py  tests_main.py
src/tools/cmd_exec/: Dockerfile  README.md  pyproject.toml
src/tools/cmd_exec/app/: api.py  cmd_exec.py  tests_api.py  tests_cmd_exec.py
src/tools/communication/: Dockerfile  README.md  pyproject.toml
src/tools/communication/app/: api.py  communication_channel.py  slack.py  tests_api.py
src/tools/confluence/: API_DOCUMENTATION.md  DEPLOYMENT.md  Dockerfile  INTEGRATION_TESTS.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run_integration_tests.py
src/tools/confluence/app/: __init__.py  api.py  config.py  confluence.py  error_handler.py  job_manager.py  models.py  test_api.py  test_bulk_processing.py  test_config.py  test_confluence.py  test_error_handling.py  test_health_endpoints.py  test_integration.py  test_models.py  test_performance.py  test_runbook_management.py  test_simple.py  test_vector_store.py  vector_store.py
src/tools/confluence/app/chroma/: chroma.sqlite3
src/tools/confluence/chroma/: chroma.sqlite3
src/tools/confluence/k8s/: deployment.yaml  ingress.yaml
src/tools/db_servers_cmdb/: .dockerignore  Dockerfile  README.md  pyproject.toml
src/tools/db_servers_cmdb/app/: api.py  db.py  keyvault.py  tests.py
src/tools/diagnostic/: main.py  notes.txt  tests_main.py  tests_main_postgres.py
src/tools/diagnostic/prompts/: linux_examples.txt  linux_role.txt  main.txt  postgres_examples.txt  postgres_role.txt
src/tools/interpretation/: main.py  tests_main.py
src/tools/jira/: Dockerfile  README.md  pyproject.toml
src/tools/jira/app/: api.py  jira.py  tests_api.py
src/tools/remediator/: main.py  tests_main.py
src/tools/source_identification/: main.py  tests_main.py
src/tools/verification_tool/: main.py  tests_main.py
src/tools/web_extractor/: main.py  tests_main.py
src/usecases/db_incident_assistant/: Dockerfile  README.md  pyproject.toml
src/usecases/db_incident_assistant/app/: api.py  main.py  sample_alert.json  test.py  tests_api.py  tests_main.py
