[project]
name = "confluence_tool"
version = "0.1.0"
description = "A tool to interact with Confluence pages and spaces."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "atlassian-python-api>=3.41.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
test = [
    "python-dotenv>=0.21.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0"
]

[dependency-groups]
dev = [
    "confluence-tool",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=0.21.0",
]

[tool.uv.sources]
confluence-tool = { workspace = true }
