[project]
name = "db_incident_assistant"
version = "0.1.0"
description = "Usecase db incident assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.12",
    "fastapi>=0.115.6",
    "grandalf>=0.8",
    "pymongo>=4.11.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "langchain>=0.3.17",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.62",
    "langgraph-checkpoint-mongodb>=0.1.0",
    "openai>=1.59.5",
    "requests>=2.32.3",
    "slack-bolt>=1.22.0",
    "celery[redis]>=5.4.0",
    "tavily-python>=0.7.2"
]

